# lightbulb

./: .gitignore  Cargo.toml  README.md  build.rs  test.db
migrations/: 20241226144333_create_auctions_table.sql
src/: domain.rs  lib.rs  main.rs
src/core/: domain.rs  errors.rs  mod.rs
src/core/auction/: manager.rs  mod.rs  worker.rs
src/core/registry/: auction.rs  bid.rs  chain.rs  mod.rs
src/db/: client.rs  errors.rs  mod.rs  pool.rs
src/db/repositories/: auction.rs  mod.rs
src/grpc/: mod.rs  utils.rs
src/grpc/client/: auction_worker.rs  mod.rs
src/rpc/: errors.rs  mod.rs
src/rpc/internal/: mod.rs
src/rpc/internal/api/: auction_worker.rs  mod.rs
src/rpc/internal/client/: auction_worker.rs  mod.rs
src/rpc/utils/: conversions.rs  cors.rs  mod.rs
src/services/: chain_registry.rs  mod.rs
src/services/auction/: manager.rs  mod.rs  worker.rs
src/services/bid/: mod.rs
src/services/db/: client.rs
src/services/registry/: auction.rs  bid.rs  chain.rs  mod.rs  sla.rs
src/utils/: errors.rs  helpers.rs  mod.rs  types.rs
tests/: integration_test.rs
