[package]
name = "lightbulb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
dashmap = "6.1.0"
hex = "0.4.3"
sha2 = "0.10.8"
sqlx = {version = "0.8.2", features = [ "runtime-tokio", "macros", "sqlite" ]}
thiserror = "2.0.9"
tokio = {version = "1.42.0", features = ["full"]}
