[package]
name = "lightbulb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
hex = "0.4.3"
prost = "0.13.4"
sha2 = "0.10.8"
sqlx = {version = "0.8.3", features = [ "runtime-tokio", "macros", "sqlite" ]}
thiserror = "2.0.11"
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
