[package]
name = "lightbulb"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
hex = "0.4.3"
http = "1.2.0"
jsonrpsee = { version = "0.24.8", features = ["full"] }
jsonrpsee-types = "0.24.8"
prost = "0.13.4"
sha2 = "0.10.8"
sqlx = {version = "0.8.3", features = [ "runtime-tokio", "macros", "sqlite" ]}
thiserror = "2.0.11"
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"
tower = "0.4.13"
tower-http = {version = "0.6.2", features = ["full"]}
tracing = { version = "0.1.41", features = ["attributes", "async-await"] }

[build-dependencies]
tonic-build = "0.12.3"
